# dkarchiver

./: .gitignore  History.md  README.md  pyproject.toml
dkarchiver/: __init__.py  search_in_archive.py
dkarchiver/arch_wrappers/: sevenz_app_w.py  sevenzs.py  shutils.py  zips.py
